--- a/my-react-app/src/App.css
+++ b/my-react-app/src/App.css
@@ -1,16 +1,26 @@
-.App {
-  text-align: center;
+/* 
+F4E7FB F3DCDC F5BCBA E3AADD C8A8E9 C3C7F3
+Libre Baskerville 
+Source Sans Pro
+pairing serif and sans serif
+ */
+
+ body {
+  background-color: #c3c7f3;
+  margin-top: 100px;
+  margin-bottom: 100px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.all {
+  background-color: #c3c7f3;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.books-table {
+  background-color: #c8a8e9;
+  border: 2px solid black;
+  padding: 5px;
+  font-family: "Libre Baskerville, serif";
+  font-weight: bold;
 }
 
 .App-header {
@@ -24,15 +34,153 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.footer {
+  display: flex;
+  /* justify-content: center; */
+  align-items: flex-end;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: #f8f9fa;
+  border-top: 1px solid #ccc;
+  padding: 7px;
+  z-index: 100;
+  font-size: 0.7em;
+  height: 75px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header {
+  height: 55px;
+  background-color: #c3c7f3;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
+
+  display: grid;
+  height: 100px;
+  place-items: center;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 16px;
+  font-family: "Libre Baskerville, serif";
+  background-color: #e3aadd;
+  border-radius: 8px; /* Rounded corners */
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2); /* Box shadow */
+  max-width: 300px; /* Maximum width */
+  margin: 0 auto; /* Center the form horizontally */
+  text-align: center; /* Center the text */
+  margin-top: 20px; /* Add margin at the top */
+}
+
+input[type="text"],
+input[type="email"],
+input[type="password"],
+input[type="number"],
+.text-input {
+  margin-bottom: 10px;
+  border-radius: 8px;
+  background-color: #f4e7fb;
+  padding: 8px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  margin-left: 20px;
+  margin-right: 30px;
+}
+
+label {
+  font-size: 16px; /* Increase the font size for labels */
+  text-align: left; /* Align labels to the left */
+}
+
+.text-input {
+  margin-bottom: 10px; /* Add some margin at the bottom of input elements */
+  border-radius: 8px; /* Make the input fields slightly rounder */
+  background-color: #f4e7fb; /* Add a background color */
+  padding: 8px; /* Add padding to the input fields */
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2); /* Add a box shadow */
+  margin-left: 20px;
+  margin-right: 30px;
+}
+
+button[type="submit"] {
+  background-color: #c3c7f3; /* Add a background color */
+  border: none; /* Remove the button border */
+  color: white; /* Text color */
+  padding: 10px 20px; /* Padding for better button appearance */
+  border-radius: 8px; /* Make the button slightly rounder */
+  cursor: pointer; /* Add a pointer cursor on hover */
+  font-weight: bold; /* Make the text bold */
+  font-size: 16px; /* Increase the font size */
+  margin-top: 10px; /* Add margin at the top */
+  margin-bottom: 10px; /* Add some margin at the bottom of input elements */
+  border-radius: 8px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
+
+button[type="submit"]:hover {
+  background-color: #c8a8e9; /* Change the background color on hover */
+}
+
+.input-pair {
+  display: flex;
+  flex-direction: column;
+}
+/* 
+.input-column {
+  margin-bottom: 10px; 
+} */
+
+.bookcard {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row; /* Set to "row" for horizontal line */
+  align-items: stretch; /* Add this line to make all items have the same height */
+  font-family: "Libre Baskerville, serif";
+  margin: 30px; /* Add margin for space between items */
+  background-color: #e3aadd;
+}
+
+.bookcardspacing {
+  margin: 7px;
+  /* background-color: #F3DCDC; */
+}
+
+.h2 {
+  text-align: center;
+}
+
+BookCard {
+  background-color: #f3dcdc;
+}
+label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+input {
+  padding: 8px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.select-container {
+  position: relative;
+}
+
+.custom-select {
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #fff;
+  color: #333;
+  outline: none;
 }
