--- a/my-react-app/src/App.css
+++ b/my-react-app/src/App.css
@@ -6,9 +6,11 @@ pairing serif and sans serif
  */
 
  body {
-  background-color: #c3c7f3;
-  margin-top: 100px;
+  background-color: #f5f5f5;
   margin-bottom: 100px;
+  max-width: 90%;
+  margin-left:auto;
+  margin-right:auto;
 }
 
 .all {
@@ -64,6 +66,7 @@ pairing serif and sans serif
   display: grid;
   height: 100px;
   place-items: center;
+  
 }
 
 .form-container {
@@ -157,7 +160,7 @@ button[type="submit"]:hover {
   text-align: center;
 }
 
-BookCard {
+.BookCard {
   background-color: #f3dcdc;
 }
 label {
@@ -183,4 +186,12 @@ input {
   background-color: #fff;
   color: #333;
   outline: none;
+}
+
+.h1Col {
+  color: #0066cc;
+  text-align: center;
+}
+.navBar{
+  text-align: center;
 }
